CHATS_SIT/force-app/main/default/objects/batchsit_t_auth_status__x/fields/isactive__c.field-meta.xml
<CustomField>
    <fullName>isactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isactive</description>
    <externalDeveloperName>isactive</externalDeveloperName>
    <label>Isactive</label>
    <type>Checkbox</type>
</CustomField>